Wed Jul 27 22:46:59 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* test/rinda/test_rinda.rb (test_remote_array_and_hash):
	  add local variables to protect objects from GC. [ruby-dev:44253]
	  [Bug #5104]

Wed Jul 27 17:55:54 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/missing.h: define __syscall if the platform has
	  __syscall in the library but doesn't define it in headers
	  for example Mac OS X.

Wed Jul 27 15:39:14 2011  Eric Hodel  <drbrain@segment7.net>

	* object.c:  Add usage documentation for BasicObject.  Based on patch
	  by Thomas Sawyer.  [Ruby 1.9 - Bug #5067]

Wed Jul 27 12:24:17 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/uninstaller.rb:  Add missing require and update
	  messaging to avoid confusion with uninstall --format-executable.
	  [Ruby 1.9 - Bug #4062]

Wed Jul 27 09:34:24 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems 1.8.6.1.

Wed Jul 27 09:27:59 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_pkcs12.rb: Add test and intermediate certificates.
	  [ Ruby 1.9 - Feature #3793 ] [ruby-core:32088]

Wed Jul 27 01:05:32 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval_error.c (rb_print_undef_str): new function to raise
	  NameError for undefined method.

	* load.c (rb_mod_autoload_p), object.c (rb_mod_const_get),
	  variable.c (rb_f_untrace_var, set_const_visibility), vm_method.c
	  (rb_mod_{remove,undef,alias}_method, set_method_visibility):
	  remove inadvertent symbol creation.  based on the first patch by
	  Jeremy Evans at [ruby-core:38447].  [Feature #5089]

	* vm_method.c (obj_respond_to): fix the respond_to_missing? override
	  case.  based on the patch by Jeremy Evans at [ruby-core:38417].
	  [Feature #5072]

	* parse.y (rb_check_id): make the given name a symbol or a string.
	  based on the second patch by Jeremy Evans at [ruby-core:38447]

Wed Jul 27 00:50:00 2011  Kenta Murata  <mrkn@mrkn.jp>
